syntax = "proto3";

package helloworld;

// The greeting service definition.
service Hello {
  // Sends a greeting
  rpc SayHello (HelloRequest) returns (HelloReply) {}

  // Get with Server-Side Streaming
  rpc GetServerSideStreaming (User) returns (stream Product) {}

  // Get with Client-Side Streaming
  rpc GetClientSideStreaming (stream User) returns (Product) {}

  // Get with bidirectional Streaming
  rpc GetBiDirectionalStreaming (stream User) returns (stream Product) {}
}

message Product {
  string name = 1;
}

message User {
  string name = 1;
}

// The request message
message HelloRequest {
  string name = 1;
}

// The response message
message HelloReply {
  string message = 1;
}
